ajuste no login

--- a/login.html
+++ b/login.html
@@ -167,7 +167,7 @@
         senha: senha
       })
         .then(function (response) {
-          alert('Login realizado com sucesso!');
+        //  alert('Login realizado com sucesso!');
           localStorage.setItem('usuarioLogado', JSON.stringify(response.data.usuario));
           window.location.href = 'index.html';
         })
