--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ amarelo #fde01b
                   <span>
                     Entrar
                   </span>
+                  <button onclick="logout()">Sair</button>
                 </a>
                 <a href="cadastro.html">
                   <i class="fa fa-user" aria-hidden="true"></i>
@@ -654,6 +655,13 @@ amarelo #fde01b
     var labelUsuario = document.getElementById('labelUsuario');
     console.log(JSON.parse(usuarioLogado));
     labelUsuario.innerHTML = usuarioLogado ? 'Usuário: ' + JSON.parse(usuarioLogado).nome : 'Usuário não logado';
+  
+    function logout() {
+      alert('Logout realizado com sucesso!');
+      localStorage.removeItem('usuarioLogado');
+      window.location.href = 'login.html';
+    }
+  
   </script>
 
 
