adicionando pág de perfil

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@ amarelo #fde01b
                     <a class="nav-link" href="contact.html">Catálogo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="editar_user.html">Perfil</a>
+                    <a class="nav-link" href="home_user.html">Perfil</a>
                   </li>
                 </ul>
               </div>
               <div class="quote_btn-container">
                 <div id="labelUsuario"></div>
-                <a href="login.html">
+                <a href="home_user.html">
                   <i class="fa fa-user" aria-hidden="true"></i>
                   <span>
                     Entrar
