Add produtos cadastrados na tela perfil

--- a/home_user.html
+++ b/home_user.html
@@ -148,7 +148,25 @@
             <p class="info-text" id="cepUsuario">00000-000</p>
           </div>
         </div>
-
+        <div class="row text-left mt-4">
+          <div class="col-md-12 mb-3">
+            <p class="info-label">Pontos de Coleta Cadastrados:</p>
+            <ul class="info-text">
+              <li><strong>EcoPonto Central</strong> - Rua das Flores, 123, São Paulo - SP</li>
+              <li><strong>Recicla Mais</strong> - Av. Verde Esperança, 456, Guarulhos - SP</li>
+            </ul>
+          </div>
+        
+          <div class="col-md-12 mb-3">
+            <p class="info-label">Produtos Cadastrados:</p>
+            <ul class="info-text">
+              <li><strong>Feijjão</strong> - Quantidade: 10 (Cadastrado em 01/05/2025)</li>
+              <li><strong>Açucar</strong> - Quantidade: 3 (Cadastrado em 02/05/2025)</li>
+              <li><strong>Batata</strong> - Quantidade: 15 (Cadastrado em 03/05/2025)</li>
+            </ul>
+          </div>
+        </div>
+        
         <a href="editar_user.html" class="btn-editar">Editar Perfil</a>
       </div>
     </div>
@@ -157,7 +175,7 @@
   <!-- Footer -->
   <footer class="footer_section">
     <div class="container">
-      <p>© <span id="displayYear"></span>© 2025 All Rights Reserved By Free Html Templates</p>
+      <p>© 2025 All Rights Reserved By Free Html Templates</p>
     </div>
   </footer>
 
