--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -219,7 +219,7 @@ console.log(usuarioLogado);
     valor: 0.00
   };
 
-  axios.post('https://ciclovida.ki6.com.br/ciclovidahttp://localhost/ciclovida/api_php/item.php', dadosCadastro)
+  axios.post('https://ciclovida.ki6.com.br/ciclovida/api_php/item.php', dadosCadastro)
     .then(function () {
       alert('Produto cadastrado com sucesso!');
       window.location.href = 'lista_produtos.html';
